--- a/sections/about-banner.liquid
+++ b/sections/about-banner.liquid
@@ -42,7 +42,7 @@
           </a>
         </div>
       </div>
-      {%- endcase -%}{%- endfor -%}
+      <!-- {%- endcase -%}{%- endfor -%} -->
     </div>
   </div>
 </div>
