--- a/sections/about-banner.liquid
+++ b/sections/about-banner.liquid
@@ -42,12 +42,12 @@
           </a>
         </div>
       </div>
-      <!-- {%- endcase -%}{%- endfor -%} -->
+      {%- endcase -%}{%- endfor -%}
     </div>
   </div>
 </div>
-<!-- 
-{%- include 'section-style' -%} -->
+
+{%- include 'section-style' -%}
 {%- endif -%}
 
 
