--- a/snippets/header_1.liquid
+++ b/snippets/header_1.liquid
@@ -28,7 +28,7 @@
             {%- if section.settings.currency_enable or section.settings.show_user_menu -%}
             <div class="setting-wrap">
               <button class="setting-active">
-                <i class="sli sli-settings"></i>
+                <i class="sli sli-lock"></i>
               </button>
               {%- include 'currency-usermenu' -%}
             </div>
