--- a/sections/footer_4.liquid
+++ b/sections/footer_4.liquid
@@ -19,6 +19,7 @@
               <p>{{ block.settings.content }}</p>
               {%- endif -%}            
             </div>
+            <h1>hello</h1>
 
            
             {%- if block.settings.newsletter_social_show -%}
