--- a/sections/footer_5.liquid
+++ b/sections/footer_5.liquid
@@ -302,6 +302,139 @@
 	],
     "blocks": [
     {
+			"type": "newsletter",
+			"name": "Newsletter Subscribe",
+			"settings": [
+                {
+                    "type": "select",
+                    "id": "widget_col",
+                    "label": "Select Column",
+                    "options": [
+                        {
+                            "label": "2",
+                            "value": "2"
+                        },
+                        {
+                            "label": "3",
+                            "value": "3"
+                        },
+                        {
+                            "label": "4",
+                            "value": "4"
+                        },
+                        {
+                            "label": "5",
+                            "value": "5"
+                        },
+                        {
+                            "label": "6",
+                            "value": "6"
+                        },
+                        {
+                            "label": "7",
+                            "value": "7"
+                        },
+                        {
+                            "label": "8",
+                            "value": "8"
+                        },
+                        {
+                            "label": "9",
+                            "value": "9"
+                        },
+                        {
+                            "label": "10",
+                            "value": "10"
+                        },
+                        {
+                            "label": "11",
+                            "value": "11"
+                        },
+                        {
+                            "label": "12",
+                            "value": "12"
+                        }
+                    ],
+                    "default": "6"
+                },
+                {
+                    "type": "select",
+                    "id": "widget_col_md",
+                    "label": "Select Column (Medium Screen)",
+                    "options": [
+                        {
+                            "label": "2",
+                            "value": "2"
+                        },
+                        {
+                            "label": "3",
+                            "value": "3"
+                        },
+                        {
+                            "label": "4",
+                            "value": "4"
+                        },
+                        {
+                            "label": "5",
+                            "value": "5"
+                        },
+                        {
+                            "label": "6",
+                            "value": "6"
+                        },
+                        {
+                            "label": "7",
+                            "value": "7"
+                        },
+                        {
+                            "label": "8",
+                            "value": "8"
+                        },
+                        {
+                            "label": "9",
+                            "value": "9"
+                        },
+                        {
+                            "label": "10",
+                            "value": "10"
+                        },
+                        {
+                            "label": "11",
+                            "value": "11"
+                        },
+                        {
+                            "label": "12",
+                            "value": "12"
+                        }
+                    ],
+                    "default": "6"
+                },
+				{
+					"type": "image_picker",
+					"id": "logo",
+					"label": "Image"
+				},
+				{
+					"type": "textarea",
+					"id": "content",
+					"label": "Content",
+					"default": "Subscribe to our newsleter, Enter your emil address"
+				},
+                {
+                    "type": "checkbox",
+                    "id": "newsletter_form_show",
+                    "label": "Newsletter Form Show",
+                    "default": true
+                },
+				{
+					"type": "color",
+					"id": "subscribe_btnhover_bg_Color",
+					"label": "Button Hover BG Color",
+					"default": "#ff3535"
+				}
+			]		
+		},
+    {
 			"type": "about_info",
 			"name": "helllo Info",
 			"settings": [
