--- a/sections/footer_5.liquid
+++ b/sections/footer_5.liquid
@@ -573,7 +573,7 @@
 					"type": "textarea",
 					"id": "content",
 					"label": "Content",
-					"default": "Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do eiusmod tempor inci ut labore et dolore"
+					"default": "Lorem ipsum dolor sit amet, consectet adipi elit, sed do eius tempor incididun ut labore gthydolore."
 				},
                 {
                     "type": "header",
@@ -584,7 +584,7 @@
                   "type": "text",
                   "id": "footer_info_1_content",
                   "label": "Content",
-                  "default": "Addresss: 123 Pall Mall, London England"
+                  "default": "184 Main Rd E, St Albans VIC 3021,"
                 },
                 {
                     "type": "header",
@@ -594,7 +594,7 @@
                   "type": "text",
                   "id": "footer_info_2_content",
                   "label": "Content",
-                  "default": "Email: hello@hasthemes.com"
+                  "default": "info@example.com"
                 },              
                 {
                     "type": "header",
