--- a/snippets/newsletter-form.liquid
+++ b/snippets/newsletter-form.liquid
@@ -16,6 +16,7 @@
     <div class="clear">
       <input id="mc-embedded-subscribe" class="button" type="submit" name="subscribe" value="">
     </div>
+   
   </div>
 </form>
 
@@ -44,9 +45,10 @@
          autocorrect="off" 
          autocapitalize="off">
 
-  <div class="clear">
+  <!-- <div class="clear">
     <input id="mc-embedded-subscribe newsletter-btn" class="button" type="submit" name="subscribe" value="" id="Subscribe">
-  </div>
+  </div> -->
+  <button class="btn-submit" type="button">Subscribe</button>
 </div>
 {%- endif -%}
 {%- endform -%}
