--- a/sections/slider-boxed.liquid
+++ b/sections/slider-boxed.liquid
@@ -555,13 +555,13 @@
 					"type": "text",
 					"id": "title1",
 					"label": "Title",
-					"default": "Looky eye E5001"
+					"default": "NEW ARRIVAL"
 				},
 				{
 					"type": "textarea",
 					"id": "description",
 					"label": "Description",
-					"default": "Lorem Ipsum is simply dummy text of the <br> printing and typesetting industry."
+					"default": "There are many variations of passages of Lorem Ipsum availables, but the majority have suffered alteration in some form."
 				},
 				{
 					"type": "text",
