--- a/sections/slider.liquid
+++ b/sections/slider.liquid
@@ -371,7 +371,7 @@
             "type": "color",
             "id": "controlnav_bg_color",
             "label": "BG Color",
-            "default": "#fff"
+            "default": "#f76b6a"
           },
           {
             "type": "color",
