--- a/snippets/mini-cart.liquid
+++ b/snippets/mini-cart.liquid
@@ -5,10 +5,10 @@
 
 <button class="icon-cart-active">
   <span class="icon-cart">
-    <i class="sli sli-bag"></i>
+    <i class="sli sli-basket-loaded"></i>
     <span class="count-style bigcounter">{{ item_count }}</span>
   </span>
-  <span class="cart-price shopping-cart__total">{{ cart.total_price | money }}</span>
+  <!-- <span class="cart-price shopping-cart__total">{{ cart.total_price | money }}</span> -->
 </button>
 
 <div class="shopping-cart-content">
