--- a/assets/skin-and-color.css.liquid
+++ b/assets/skin-and-color.css.liquid
@@ -291,8 +291,9 @@ a:hover {
 .mobile-off-canvas-active .header-mobile-aside-wrap .mobile-curr-lang-wrap .single-mobile-curr-lang:hover > a {
   color: {{ settings.color_primary }}; }
 .single-slider .slider-content .slider-btn a:hover {
-  border: 2px solid {{ settings.color_primary }};
-  background-color: {{ settings.color_primary }}; }
+  /* border: 2px solid {{ settings.color_primary }}; */
+  /* background-color: {{ settings.color_primary }};  */
+}
 .single-slider .slider-content-2 .slider-btn a:hover {
   border: 2px solid {{ settings.color_primary }};
   background-color: {{ settings.color_primary }}; }
