--- a/assets/skin-and-color.css.liquid
+++ b/assets/skin-and-color.css.liquid
@@ -298,7 +298,7 @@ a:hover {
   border: 2px solid {{ settings.color_primary }};
   background-color: {{ settings.color_primary }}; }
 .nav-style-1.owl-carousel .owl-nav div:hover {
-  background-color: {{ settings.color_primary }};
+  background-color:#f76b6a;
   border: 1px solid {{ settings.color_primary }}; }
 .single-banner .banner-content a:hover {
   border-bottom: 1px solid {{ settings.color_primary }}; }
