--- a/snippets/product-action-grid.liquid
+++ b/snippets/product-action-grid.liquid
@@ -2,40 +2,14 @@
 <div class="ht-product-action{% unless settings.product_action_pos == 'center' %} {{ p_content_align }}{% endunless %}">
   <ul>
     {%- if settings.product_quickview_enalbe -%}
-    <li>
-      <a href="javascript:void(0);" 
-         onclick="quiqview('{{ product.handle | handleize }}')"
-         data-toggle="modal" 
-         data-target="#exampleModal">
-        <i class="sli sli-magnifier"></i>
-        <span class="ht-product-action-tooltip">{{ settings.qcv_title }}</span>
-      </a>
-    </li>
-    {%- endif -%}
-
-    {%- if settings.show_product_wishlist -%}
-    <li>
-      {%- if product.handle != blank -%}
-      <a class="action-wishlist tile-actions--btn flex wishlist-btn wishlist" href="javascript: void(0)" button-wishlist data-product-handle="{{ product.handle }}" data-toggle="tooltip" data-placement="left" title="{{ settings.wishlist_title }}">
-        <span class="add-wishlist"><i class="sli sli-heart"></i><span class="ht-product-action-tooltip">{{ settings.wishlist_t }}</span></span>
-        <span class="loading-wishlist"><i class="sli sli-heart"></i><span class="ht-product-action-tooltip">{{ settings.wishlist_t }}</span></span>
-        <span class="remove-wishlist"><i class="sli sli-heart"></i><span class="ht-product-action-tooltip">{{ settings.wishlist_t }}</span></span>
-      </a>
-      {%- endif -%}
-    </li>
-    {%- endif -%}
-
-    {%- if settings.compare_product_enalbe -%}
-    <li><a href="#" data-pid="{{ product.handle }}" class="compare"><i class="sli sli-refresh"></i><span class="ht-product-action-tooltip">{{ settings.compare_button_title }}</span></a></li>
-    {%- endif -%}
-
+    
     <li>
       {%- if product.available -%}  
       
       {%- if settings.product_cart_type == 'ajax_spin_cart' -%}
       <a href="javascript:void(0);" onclick="{{ func }}; return false;" class="ajax-spin-cart ht-product-action-btn">
         <span class="cart-title">
-          <i class="sli sli-bag"></i><span class="ht-product-action-tooltip">{{ settings.cart_button_title }}</span>
+          <i class="sli sli-basket-loaded"></i><span class="ht-product-action-tooltip">{{ settings.cart_button_title }}</span>
         </span>
 
         <span class="cart-loading">
@@ -53,7 +27,7 @@
       
       {%- elsif settings.product_cart_type == 'ajax_popup_cart' -%}
       <a href="javascript:void(0);" onclick="{{ func }}; return false;" class="ht-product-action-btn">
-        <i class="sli sli-bag"></i><span class="ht-product-action-tooltip">{{ settings.cart_button_title }}</span>
+        <i class="sli sli-basket-loaded"></i><span class="ht-product-action-tooltip">{{ settings.cart_button_title }}</span>
       </a>
       
       {%- elsif settings.product_cart_type == 'without_ajax_cart' -%}
@@ -74,8 +48,36 @@
         <i class="sli sli-bag"></i><span class="ht-product-action-tooltip">{{ settings.soldout_button_title }}</span>
       </a>
       {%- endif -%}
+      {%- if settings.show_product_wishlist -%}
+    <li>
+      {%- if product.handle != blank -%}
+      <a class="action-wishlist tile-actions--btn flex wishlist-btn wishlist" href="javascript: void(0)" button-wishlist data-product-handle="{{ product.handle }}" data-toggle="tooltip" data-placement="left" title="{{ settings.wishlist_title }}">
+        <span class="add-wishlist"><i class="sli sli-heart"></i><span class="ht-product-action-tooltip">{{ settings.wishlist_t }}</span></span>
+        <span class="loading-wishlist"><i class="sli sli-heart"></i><span class="ht-product-action-tooltip">{{ settings.wishlist_t }}</span></span>
+        <span class="remove-wishlist"><i class="sli sli-heart"></i><span class="ht-product-action-tooltip">{{ settings.wishlist_t }}</span></span>
+      </a>
+      {%- endif -%}
+    </li>
+    {%- endif -%}
       
     </li>
+    <li>
+      <a href="javascript:void(0);" 
+         onclick="quiqview('{{ product.handle | handleize }}')"
+         data-toggle="modal" 
+         data-target="#exampleModal">
+        <i class="sli sli-magnifier"></i>
+        <span class="ht-product-action-tooltip">{{ settings.qcv_title }}</span>
+      </a>
+    </li>
+    {%- endif -%}
+
+    
+
+    <!-- {%- if settings.compare_product_enalbe -%}
+    <li><a href="#" data-pid="{{ product.handle }}" class="compare"><i class="sli sli-refresh"></i><span class="ht-product-action-tooltip">{{ settings.compare_button_title }}</span></a></li>
+    {%- endif -%} -->
+
 
   </ul>
 </div>
