--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -34,6 +34,11 @@
       
     </div>
     
+<!-- {% if product.options contains 'Size' %} 
+<a href="#size-chart" class="popup-trigger" data-popup-trigger="one" >
+    See size chart
+</a> 
+{% endif %} -->
   </div>
 
 
