--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -34,11 +34,7 @@
       
     </div>
     
-<!-- {% if product.options contains 'Size' %} 
-<a href="#size-chart" class="popup-trigger" data-popup-trigger="one" >
-    See size chart
-</a> 
-{% endif %} -->
+<!-- description-review-topbar nav -->
   </div>
 
 
