--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -5,7 +5,7 @@
         {% section 'product-template' %}
         {% section 'single-product-tab' %}
         {% section 'related-product' %}
-        {% section 'custom-collection' %}
+        <!-- {% section 'custom-collection' %} -->
       </div>
       {% section 'product-sidebar' %}
     </div>
