--- a/snippets/social-share.liquid
+++ b/snippets/social-share.liquid
@@ -26,6 +26,7 @@
   <ul class="social-links">
     <li><a href="//www.facebook.com/sharer.php?u={{ permalinkURL }}" title="Follow us on Facebook" target="_blank"><span class="shopify-social-icon-facebook-rounded color"></span></a></li>
     <li><a href="//twitter.com/share?text={{ shareTitle }}&amp;url={{ permalinkURL }};source=webclient" title="Follow us on Twitter" target="_blank"><span class="shopify-social-icon-twitter-rounded color"></span></a></li>
+    <li><a href="//google.com//share?text={{ shareTitle }}&amp;url={{ permalinkURL }};source=webclient" title="Follow us on Google Plus" target="_blank"><span class="shopify-social-icon-google-rounded color"></span></a></li>
     {% if product.featured_image or article.image  %}
     <li><a href="//pinterest.com/pin/create/button/?url={{ permalinkURL }}&amp;media=http:{% if template contains 'product' %}{{ product | img_url: '1024x1024' }}{% else %}{{ article | img_url: '1024x1024' }}{% endif %}&amp;description={{ shareTitle }}" title="Follow us on Pinterest" target="_blank"><span class="shopify-social-icon-pinterest-rounded color"></span></a></li>
     {% endif %}
