--- a/snippets/collection-sidebar.liquid
+++ b/snippets/collection-sidebar.liquid
@@ -123,22 +123,25 @@
         {% assign size_list_limit = block.settings.size_list_limit_hanlde %}
 
         {% for t in tags limit: size_list_limit %}
+        
         {% assign tag = t | strip %}
-        {%- if current_tags contains tag -%}
+        <!-- {%- if current_tags contains tag -%} -->
+        <h1>hu</h1>
         <li class="active">
           <div class="sidebar-widget-list-left">
+            <h1>hello</h1>
             <input type="checkbox" checked> <a href="/collections/all/{{ tag | handle }}">{{ tag }}</a>
             <span class="checkmark"></span> 
           </div>
         </li>
-        {%- elsif collection.all_tags contains tag -%}  
+        <!-- {%- elsif collection.all_tags contains tag -%}   -->
         <li>
           <div class="sidebar-widget-list-left">
             <input type="checkbox"> <a href="/collections/all/{{ tag | handle }}">{{ tag }}</a>
             <span class="checkmark"></span>
           </div>
         </li>
-        {%- endif -%}
+        <!-- {%- endif -%} -->
         {% endfor %}
       </ul>
     </div>
